# price-tracker

./: .gitignore  Gem comparison products copy.xlsx  Gem comparison products.xlsx  PriceTracker.ipynb  README.md  pyproject.toml
docs/source/: api.rst  conf.py  index.rst
price_tracker/: __main__.py  calculate_minimum_price.py  const.py  delivery_location.py  filter_competitors_details.py  get_competitors_details.py  get_min_competitor_price.py  get_products.py  init_argparse.py  is_delivery_location.py  parse_args.py  parse_competitors_web_details.py  process_product.py  setup_logging.py  write_to_excel.py
tests/: filter_competitors_details_test.py  get_competitors_details_test.py  get_products_test.py  parse_competitors_web_details_test.py
