[tool.poetry]
name = "price-tracker"
version = "0.2.0"
description = "Price tracker for GEM Portal"
authors = ["Nikunj Das Kasat <nikunjdaskasat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.1"
requests = "^2.31.0"
openpyxl = "^3.1.2"
tqdm = "^4.66.2"
dill = "^0.3.8"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ipykernel = "^6.29.3"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
coverage = "^7.4.3"
pytest-mock = "^3.12.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
